// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the /v1/myprofile/changepassword path should not change password because newPassword less than 6 symbols 1`] = `
Object {
  "code": 400,
  "message": "RequestValidationError(400): \\"newPassword\\" length must be at least 6 characters long",
  "name": "RequestValidationError",
}
`;

exports[`Test the /v1/myprofile/changepassword path should not change password for user, because password is wrong 1`] = `
Object {
  "code": 400,
  "message": "RequestValidationError(400): Password is wrong, please check input data.",
  "name": "RequestValidationError",
}
`;

exports[`Test the /v1/myprofile/changepassword path should not change password for user, because tokken is wrong 1`] = `
Object {
  "code": 401,
  "message": "TokenValidationError(401): Invalid token, please repeat authentication.",
  "name": "TokenValidationError",
}
`;
